css/style.css
body {
  background-color: #0d0000;
  color: gray;
  margin: 0;
}

a:link, a:visited, a:active {
  color: gray;
  text-decoration: none;
}

a:hover {
  color: white;
  text-decoration: none;
}

.hidden {
  display: none;
}

span#help-link {
  font-family: 'Trade Winds', serif;
  position: absolute;
  top: 8px;
  right: 15px;
  font-size: 110%;
}

div#help-text {
  font-family: "Helvetica", "Arial", sans-serif;
  padding: 20px;
  background-color: #0d0000;
  color: white;
  font-size: 90%;
  line-height: 1.4em;
}

div#help-text h2 {
  font-family: 'Trade Winds', serif;
  color: gray;
}

div#help-text p {
  margin-left: 25px;
}

div#header {
  margin-top: -15px;
  margin-bottom: -18px;
}

h1 {
  font-family: 'Trade Winds', serif;
  text-align: center;
  font-size: 40px;
}

h1 sup {
  font-size: 40%;
}

div#game {
  text-align: center;
}

canvas {
  background-color: #000000;
  border: gray solid 1px;
  width: 900px;
  height: 600px;
}

div#hud {
  width: 900px;
  text-align: center;
  margin-left: auto;
  margin-right: auto;
  margin-top: 20px;
}

span#p1health {
  float: left;
  color: red;
  font-size: 130%;
}

span#p2health {
  float: right;
  color: blue;
  font-size: 130%;
}

div#bomns {
  margin-top: 10px;
}

span#p1bomns {
  float: left;
  color: red;
  font-size: 125%;
}

span#p2bomns {
  float: right;
  color: blue;
  font-size: 125%;
}

div#winner-message {
  font-family: 'Trade Winds', serif;
  color: white;
  /* a bit of a hack -- makes the winner message appear in the center of the
   * canvas: */
  margin-top: -400px;
}

div#winner-message h2 {
  font-size: 120%;
}

div#winner-message p {
  margin-top: -10px;
}

